# AI-Code-generator

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env  .env.sample  .gitignore  Makefile  config.py  constants.py  flask.cache.config.json  gunicorn_config.py  main.py  pyproject.toml  requirement.txt  requirements.txt  server.py
backend/auth/: clerk_auth.py
backend/db/: database.py  sqlalchemy_orm.py
backend/db/migrations/: run_migrations.py
backend/extract_functions_from_repository/: extract_functions_from_repo.py
backend/files_to_json/: parse_functions.py
backend/groqclould/: contextual_response.py  groq_response.py  system_prompt.py
backend/helpers/: encryption_helper.py  request_helper.py
backend/huggingface_deployment/: hf_client.py
backend/llm/: chat_ollama.config.json  ollama.config.json  ollama_models.py  system_prompt.py
backend/mappers/: model_mapper.py
backend/multi_layer_operation_predictor/: extract_functions_from_repo.py  operation_predictor.py  test_multi_layer_operation_predicator.py
backend/multi_layer_operation_predictor/data/: function.json  java_functions.json  javascript_functions.json  php_functions.json  python_functions.json  typescript_functions.json
backend/multi_layer_operation_predictor/model/: java_knn_model.h5  javascript_knn_model.h5  knn_model.h5  typescript_knn_model.h5
backend/operation_predictor/: extract_functions.py  operation_predictor.py  operation_predictor_model.h5  operations_data.json
backend/routes/: github_routes.py
backend/scheduler/: token_scheduler.py
backend/tests/unit/multi_layer_operation_predictor/: test_multi_layer_operation_predicator.py
front/: .env  .env.sample  README.md  index.html  package.json  vite.config.ts
front/src/: App.tsx  Router.tsx  index.html  main.tsx
front/src/components/: Chat.tsx  ChatHistory.tsx  CodeCompletionToolsProviders.tsx  CustomFileInput.tsx  GihubLoginPage.tsx  SideDrawer.tsx  UserDetailsProviders.tsx  completion-formatter.ts  file-tree.tsx  icon.tsx
front/src/components/Layout/: Sidebar.tsx  Tools.tsx  appLayout.tsx  appheader.tsx  constants.tsx  types.ts
front/src/components/Loader/: CircularLoader.tsx  CirculatLoader.css
front/src/components/authentication/: AuthGuard.tsx  WelcomePage.tsx
front/src/hooks/: useApi.ts  useAuthState.ts  useGitHubOAuth.ts  useGithubToken.ts  useLazyApi.ts
front/src/pages/Chat/: index.tsx
front/src/pages/Editor/: codeCompletion.tsx  code_complitor.tsx  index.tsx  upload.tsx
front/src/pages/Home/: index.tsx
front/src/pages/MoreOptions/: index.tsx
front/src/utils/: file-manager.tsx  localStorageHelpers.ts
