[tool.poetry]
name = "Intelligent-Code-Completion-Tool"
version = "0.1.0"
description = "The Intelligent Code Completion Tool provides real-time, context-aware code suggestions and completions based on the context of the code being written, leveraging AI models trained on vast code repositories across multiple programming languages, helping developers write efficient code more quickly and accurately."
authors = ["xxx <xxx@example.com>"]
readme = "../README.md"

packages = [{ include = "../backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-caching = "^2.3.0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
psycopg2-binary = "^2.9.10"
ollama = "^0.4.7"
langchain-groq = "^0.2.4"
langchain-community = "^0.3.16"
gradio-client = "^1.7.0"
nest-asyncio = "^1.6.0"
cryptography = "^44.0.0"
pygithub = "^2.5.0"
python-jose = "^3.3.0"
spacy = "^3.8.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.urls]
repository = "git@github.com:positsource/AI-Code-generator-tool.git"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
